--- a/src/components/pokemon.css
+++ b/src/components/pokemon.css
@@ -1,92 +1,141 @@
 /* Style général pour la page */
 body {
-    background-color: #2a2a2a;
-    color: #ffffff;
-    font-family: 'Press Start 2P', cursive; /* Police pixelisée */
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  background-color: #2a2a2a;
+  color: #ffffff;
+  font-family: "Press Start 2P", cursive; /* Police pixelisée */
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* Titre principal */
 h1 {
-    color: #ffcb05;
-    text-shadow: 2px 2px #3b4cca;
-    margin: 20px 0;
-    font-size: 24px;
+  color: #ffcb05;
+  text-shadow: 2px 2px #3b4cca;
+  margin: 20px 0;
+  font-size: 56px;
 }
 
 /* Champ de recherche */
 input[type="text"] {
-    background-color: #3b4cca;
-    color: #ffffff;
-    border: 2px solid #ffcb05;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 14px;
-    font-family: 'Press Start 2P', cursive;
-    outline: none;
-    margin-bottom: 20px;
+  background-color: #3b4cca;
+  color: #ffffff;
+  border: 2px solid #ffcb05;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 14px;
+  font-family: "Press Start 2P", cursive;
+  outline: none;
+  margin-bottom: 20px;
 }
 
 /* Bouton */
 button {
-    background-color: #ffcb05;
-    color: #3b4cca;
-    border: 2px solid #3b4cca;
-    border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 14px;
-    font-family: 'Press Start 2P', cursive;
-    cursor: pointer;
-    transition: transform 0.2s ease;
+  background-color: #ffcb05;
+  color: #3b4cca;
+  border: 2px solid #3b4cca;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 14px;
+  font-family: "Press Start 2P", cursive;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+  margin-left: 5px;
 }
 
 button:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 /* Liste déroulante */
 datalist {
-    font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
 }
 
 /* Détails du Pokémon */
 .pokemon-details {
-    background-color: #3b4cca;
-    border: 4px solid #ffcb05;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
-    text-align: center;
-    width: 300px;
-    margin: 20px auto;
-    color: #ffffff;
+  background-color: #3b4cca;
+  border: 4px solid #ffcb05;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  width: 300px;
+  margin: 20px auto;
+  color: #ffffff;
 }
 
 .pokemon-details h2 {
-    font-size: 20px;
-    margin-bottom: 10px;
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
 .pokemon-details img {
-    image-rendering: pixelated; /* Effet pixelisé pour les images */
-    width: 150px;
-    height: 150px;
-    margin-bottom: 10px;
+  image-rendering: pixelated; /* Effet pixelisé pour les images */
+  width: 150px;
+  height: 150px;
+  margin-bottom: 10px;
 }
 
 .pokemon-details p {
-    font-size: 14px;
-    margin: 5px 0;
+  font-size: 14px;
+  margin: 5px 0;
+}
+.pokemon-images {
+  display: flex;
+  flex-wrap: wrap; 
+  gap: 15px;
 }
 
+.pokemon-images .card-pokemon {
+  flex: 1 1  calc(100% / 3 - 10px); 
+  box-sizing: border-box; 
+}
+
+.card-pokemon h3{
+  font-size: 16px;
+  background-color: aliceblue;
+  color: #3b4cca;
+  border-radius: 5px;
+  width: fit-content;
+  padding: 7px;
+  margin-bottom: 5px;
+}
+
+.card-pokemon img{
+  image-rendering: pixelated;
+  width: 150px;
+  height: 150px;
+  margin-bottom: 5px;
+}
+
+
+
+.card-pokemon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #3b4cca;
+  border: 4px solid #ffcb05;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  width: 150px;
+  margin: 10px auto;
+}
+
+.card-pokemon:hover {
+  transform: scale(1.02);
+  transition: transform 0.2s ease;
+}
 /* Conteneur principal */
 div {
-    max-width: 1400px;
-    margin: 0 auto;
-    padding: 20px;
-    text-align: center;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
 }
